Cherry-pick 272461@main (d2ba4a07e209). https://bugs.webkit.org/show_bug.cgi?id=266649

Fix the failure memory order argument to compareExchangeStrong
    https://bugs.webkit.org/show_bug.cgi?id=266649

    Reviewed by Kimmo Kinnunen.

    The failure memory order cannot be release or acq_rel.
    Clang since llvm/llvm-project@fed5644 diagnoses an invalid argument.
    Furthermore, the current way it is written is undefined behavior anyway.

    From https://en.cppreference.com/w/cpp/atomic/atomic/compare_exchange:
    "If failure is stronger than success or(until C++17) is one of
    std::memory_order_release and std::memory_order_acq_rel, the behavior is
    undefined."

    * Source/WebKit/Platform/IPC/StreamClientConnectionBuffer.h:
      (IPC::StreamClientConnectionBuffer::tryAcquire): Use
      memory_order_acquire as fallback.
    * Source/WebKit/Platform/IPC/StreamServerConnectionBuffer.h:
      (IPC::StreamServerConnectionBuffer::tryAcquire): Ditto.

    Canonical link: https://commits.webkit.org/272461@main